package ca.ets.log121.lab5.pattern.observer;

public interface Observer {
    
    public void update(Observable sujet);
    
}
