package ca.ets.log121.lab5.util;

public class Serializer {

}
